name:                hive
version:             0.1.0.0
synopsis:            Server component for an online version of the board game Hive
description:         Please see README.md
homepage:            http://github.com/nathanic/hive-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Stien
maintainer:          nathanism@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type: git
    location: https://github.com/fujimura/hi.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , QuickCheck

executable hive
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test src
  main-is:
    Test.hs
  build-depends: base >= 4.7 && < 5
               , tasty >= 0.11.0.2
               , tasty-quickcheck
               , tasty-hspec
               , QuickCheck
