name:                hive
version:             0.1.0.0
synopsis:            Server component for an online version of the board game Hive
description:         Please see README.md
homepage:            http://github.com/nathanic/hive-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Stien
maintainer:          nathanism@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type: git
    location: https://github.com/nathanic/hive-hs.git

library
    exposed-modules:
        Hive.Game.Board
      , Hive.Game.Engine
      , Hive.Game.HexGrid
      , Hive.Game.Move
      , Hive.Game.Piece
    build-depends:
        base ==4.8.*
      -- game logic just needs these
      , containers
      , parsec
      -- game server needs the rest
      , aeson
      , either
      , http-types
      , servant-server
      , text
      , transformers
      , wai
      , wai-websockets
      , warp
      , websockets
    default-language: Haskell2010
    hs-source-dirs: src
    default-extensions:   DataKinds, TypeFamilies, DeriveGeneric, TypeOperators
                        , OverloadedStrings, FlexibleContexts, RecordWildCards
        -- ghc-options: -Wall

executable hive-server
    main-is: Main.hs
    build-depends:
        base -any
      , hive -any
    default-language: Haskell2010
    hs-source-dirs: exe
    ghc-options: -threaded 
        -- -Wall

test-suite hive-test-suite
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base -any
      , containers -any
      , hive -any
      , tasty ==0.11.0.2
      , tasty-hspec ==1.1.2
      , tasty-quickcheck
      , QuickCheck
      , parsec
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded 
        -- -Wall -Werror
    default-extensions:    DataKinds, TypeFamilies, DeriveGeneric, TypeOperators
                , OverloadedStrings,  FlexibleContexts, RecordWildCards

-- someday perhaps:
-- benchmark hive-benchmark
--     type: exitcode-stdio-1.0
--     main-is: Benchmark.hs
--     build-depends:
--         base -any,
--         haskeleton-playground -any,
--         criterion ==1.1.0.0
--     default-language: Haskell2010
--     hs-source-dirs: benchmark
--     ghc-options: -threaded -Wall

